--- a/install.plist
+++ b/install.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/babayorgun46/NetW/master/olus.ipa</string>
+					<string>https://raw.githubusercontent.com/babayorgun46/NetW/master/example_app.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.ios.hipstore</string>
+				<string>com.igpd.ciar</string>
 				<key>bundle-version</key>
 				<string>1</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>HiPStore</string>
+				<string>exampleapp</string>
 			</dict>
 		</dict>
 	</array>
