--- a/install.plist
+++ b/install.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.igpd.ciar</string>
+				<string>com.appvv.vshare.appen201604</string>
 				<key>bundle-version</key>
 				<string>1</string>
 				<key>kind</key>
