--- a/install.plist
+++ b/install.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>exampleapp</string>
+				<string>example_app</string>
 			</dict>
 		</dict>
 	</array>
